--- a/plugin.xml
+++ b/plugin.xml
@@ -127,6 +127,7 @@
 
         <header-file src="src/ios/CDVInAppBrowser.h" />
 	    <source-file src="src/ios/CDVInAppBrowser.m" />
+        <resource-file src="src/ios/navBack.png" />
 
 	    <framework src="CoreGraphics.framework" />
     </platform>
